syntax = "proto3";
package ruft_rpc;

message AppendEntriesReq {
    uint32 term = 1;
    // uint32 leader_id = 2;
    // uint32 prev_log_index = 3;
    // uint32 prev_log_term = 4;

    // message Log {
    //     uint32 value_id = 1;
    //     int32 value_content = 2;
    //     uint32 rec_term = 3;
    // }

    // repeated Log logs = 5;
}

message AppendEntriesResp {
    uint32 term = 1;
    bool success = 2;
}

message RequestAVoteReq {
    uint32 term = 1;
    // uint32 candidate_id = 2;
    // uint32 last_log_index = 3;
    // uint32 last_log_term = 4;
}

message RequestAVoteResp {
    uint32 term = 1;
    bool vote_granted = 2;
}

service RPC {
    rpc AppendEntries (AppendEntriesReq) returns (AppendEntriesResp);
    rpc RequestAVote (RequestAVoteReq) returns (RequestAVoteResp);
}